refactor(java-25): split SKILL.md into phases with progressive disclosure
Moved detailed phase instructions into references/ directory to follow
the Agent Skills spec recommendation of keeping SKILL.md under 500 lines.

SKILL.md (201 lines) now contains: master checklist, phase overview with
links, rules, and migration runbook. Phase details load on demand.

Also added multi-stage Docker build guidance and clarified Dockerfile/CI
coverage in the README.